istio-peer-auth.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: bank-of-anthos
spec:
  mtls:
    mode: STRICT
