istio-fault-injection-test.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: userservice
  namespace: bank-of-anthos
spec:
  hosts:
    - userservice.bank-of-anthos.svc.cluster.local
  http:
    - fault:
        delay:
          percentage:
            value: 100
          fixedDelay: 5s
      route:
        - destination:
            host: userservice.bank-of-anthos.svc.cluster.local
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,reset,connect-failure
      timeout: 8s
